fix(overflow-menu) Pin reactions on menu bottom on mobile web
Move some styles from SCSS to JSS

--- a/css/_drawer.scss
+++ b/css/_drawer.scss
@@ -24,10 +24,9 @@
 }
 
 .drawer-menu {
-    max-height: calc(80vh - 64px);
     background: #242528;
     border-radius: 16px 16px 0 0;
-    overflow-y: scroll;
+    overflow-y: auto;
     margin-bottom: env(safe-area-inset-bottom, 0);
     width: 100%;
 
